crates/sui-prover/tests/snapshots/spec_well_formed/spec_well_formed_datatype_inv_spec.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 298
expression: output
---
exiting with bytecode transformation errors
error: Consider avoiding functions with specs in datatype invariants
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_datatype_inv_spec.fail.move:10:1
   │  
10 │ ╭ fun S_inv(self: &S): bool {
11 │ │     self.get_y() > 0
12 │ │ }
   │ ╰─^
