crates/sui-prover/tests/snapshots/spec_well_formed/spec_well_formed_no_func_call.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
Verification successful
warning: unused function type parameter
  ┌─ tests/inputs/spec_well_formed/spec_well_formed_no_func_call.move:6:16
  │
6 │ public fun foo<T>() {
  │                ^ Unused type parameter 'T'.
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning: unused function type parameter
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_no_func_call.move:11:21
   │
11 │ public fun foo_spec<T>() {
   │                     ^ Unused type parameter 'T'.
   │
   = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')
