crates/sui-prover/tests/snapshots/spec_well_formed/spec_well_formed_params_attr.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 151
expression: output
---
exiting with bytecode transformation errors in spec_well_formed_analysis
warning: unused variable
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_params_attr.move:15:21
   │
15 │ public fun foo_spec(x: u64): u64 {
   │                     ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Parameter mismatch in function call: argument 1 should be 'x' but found '$t2'. Check function call parameters match spec signature order.
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_params_attr.move:15:1
   │  
15 │ ╭ public fun foo_spec(x: u64): u64 {
16 │ │   let d = 5u64;
17 │ │   let result = foo(d);
18 │ │ 
   · │
21 │ │   result
22 │ │ }
   │ ╰─^
