crates/sui-prover/tests/snapshots/spec_well_formed/spec_well_formed_params_count.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 151
expression: output
---
exiting with bytecode transformation errors in spec_well_formed_analysis
warning: unused variable
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_params_count.move:11:21
   │
11 │ public fun foo_spec(x: u128) {
   │                     ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Spec function have differ params count than underlying func
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_params_count.move:11:1
   │  
11 │ ╭ public fun foo_spec(x: u128) {
12 │ │   foo();
13 │ │   ensures(true);
14 │ │ }
   │ ╰─^
