crates/sui-prover/tests/snapshots/spec_well_formed/spec_well_formed_return_att.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 151
expression: output
---
exiting with bytecode transformation errors in spec_well_formed_analysis
warning: unused variable
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_return_att.move:16:7
   │
16 │   let result = foo(x);
   │       ^^^^^^ Unused local variable 'result'. Consider removing or prefixing with an underscore: '_result'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Underlying func result var is not returned from spec
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_return_att.move:15:1
   │  
15 │ ╭ public fun foo_spec(x: u64): u64 {
16 │ │   let result = foo(x);
17 │ │   let d = 5u64;
18 │ │ 
   · │
21 │ │   d
22 │ │ }
   │ ╰─^
